bun-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bun-app-deployment
  labels:
    app: bun-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bun-app
  template:
    metadata:
      labels:
        app: bun-app
    spec:
      containers:
      - name: bun-app
        image: dirudeen/bun-app:v1
        ports:
        - containerPort: 3000
