bun-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bun-app-service
spec:
  type: NodePort
  selector:
    app: bun-app
  ports:
    - port: 8080
      targetPort: 3000
      nodePort: 30007
