bun-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bun-app-ingress
spec:
  rules:
  - host: "foo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bun-app-service
            port:
              number: 8080
